# moo

./: .flake8  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
moo/: metrics.py  utils.py
moo/algorithm/: base.py  f.ipynb  nsga.py
moo/optim/: __init__.py  bas.py
moo/problem/: ZDT.py
tests/: test_bas.py  test_base.py  test_crowding.py  test_dominated_sort.py
