[tool.black]
line-length = 80
skip-string-normalization = true

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = [
    # Pycodestyle
    "E",
    "W",

    # Pyflakes
    "F",

    # Isort
    "I",

    # Comprehensions
    "C4",

    # Pyupgrade
    "UP",

    # NumPy-specific rules
    "NPY001",
    "NPY003",

    # Bugbear
    "B002",
    "B003",
    "B004",
    "B009",
    "B010",
    "B011",
    "B012",
    "B013",
    "B014",
    "B015",
    "B016",
    "B017",
    "B018",
    "B019",
    "B020",
    "B021",
    "B022",
    "B025",
    "B029",
    "B032",

    # Pylint
    "PLE",
    "PLC0414",
    "PLC3002",
    "PLR0206",
    "PLR0402",
    "PLR1701",
    "PLR1711",
    "PLR1722",
    "PLW3301",

    # Pygrep-hooks
    "PGH004",
]
unfixable = ["NPY001"]
ignore = [
    # Whitespace before ‘,’, ‘;’, or ‘:’, it is not compatible with black
    "E203",
    # Module level import not at top of file
    "E402",
    # Line too long (82 > 79 characters)
    "E501",
    # Do not compare types, use `isinstance()`
    "E721",
    # Do not use bare except, specify exception instead
    "E722",
    # Do not assign a lambda expression, use a def
    "E731",
    # Do not use variables named ‘l’, ‘O’, or ‘I’
    "E741",
    # `name` may be undefined, or defined from star imports: `module`
    "F405",
    # Local variable name is assigned to but never used
    "F841",
    # It not met the "Explicit is better than implicit" rule
    "UP015",
    # It will cause the performance regression on python3.10
    "UP038",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["moo"]


[tool.poetry]
name = "moo"
version = "0.0.1"
description = "multi-object optimizer"
authors = ["PuQing <me@puqing.work>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {version = "^2.1.2", python = "^3.9", platform = "linux"}
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
heartrate = "^0.2.2"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
